[package]
name = "caser-cli"
version = "0.1.0"
authors = ["jtrv <hi<at>jtrv.cc>","Dimitri Merejkowsky <dimitri.merejkowsky@tanker.io>"]
edition = "2021"
description = "Casing conversion cli"
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/jtrv/caser"
keywords = ["case", "inflect", "inflection"]
categories = ["command-line-utilities"]

[[bin]]
name = "caser"
path = "src/main.rs"

[dependencies]
cruet = "0.14.0"
